# text-to-speech-converter

./: main.py  pyproject.toml
.cache/replit/: __replit_disk_meta.json
.lesson/: instructions.md  solution.py
