[tool.poetry]
name = "repl_python3_Project-Mad-Libs-JacktoneClaranc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyttsx3 = "^2.90"
gTTS = "^2.3.1"
playsound = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
